--- a/settings/config.ini
+++ b/settings/config.ini
@@ -50,6 +50,7 @@ alexandr_channel = https://t.me/+MweenankVOczZTUy
 hub_bot = -1001427569857
 hub_channel = -1001427569857
 agregator_link = https://t.me/it_jobs_agregator
+temporary_channel = -1001671844820
 
 ;;FAKE FOR DEVELOPING -------------------------------
 ;[DB_local_clone]
@@ -94,6 +95,8 @@ agregator_link = https://t.me/it_jobs_agregator
 ;hub_channel = -1001427569857
 ;agregator_link = https://t.me/agrerator_channel_fake
 ;admin_channel_link = https://t.me/channeladmin0311
+;temporary_channel = -1001705718916
+
 ;------------------------------------------------------------------------------------
 
 [Links]
