--- a/settings/config.ini
+++ b/settings/config.ini
@@ -7,10 +7,17 @@
 ;port=5432
 
 ;;------------------------------------------------------------------
+;[DB_local_clone]
+;database=itcoty_backup
+;user=ruslan
+;password=12345
+;host=localhost
+;port=5432
+
 [DB_local_clone]
-database=itcoty_backup
-user=ruslan
-password=12345
+database=postgres
+user=postgres
+password=wPZS97ot
 host=localhost
 port=5432
 
