--- a/settings/config.ini
+++ b/settings/config.ini
@@ -16,8 +16,8 @@
 
 [DB_local_clone]
 database=postgres
-user=cw00061
-password=wPZS97ot
+user=postgres
+password=123454321
 host=localhost
 port=5432
 
