--- a/settings/config.ini
+++ b/settings/config.ini
@@ -19,7 +19,7 @@ database=postgres
 user=postgres
 password=00000
 host=172.16.16.4
-port=5432
+;port=5432
 
 [My_channels]
 no_sorted_channel = -1001175723940
