--- a/settings/config.ini
+++ b/settings/config.ini
@@ -18,8 +18,8 @@
 database=postgres
 user=postgres
 password=00000
-host=172.16.16.4
-;port=5432
+host=172.0.0.1
+port=5432
 
 [My_channels]
 no_sorted_channel = -1001175723940
