--- a/settings/config.ini
+++ b/settings/config.ini
@@ -14,49 +14,56 @@
 ;host=localhost
 ;port=5432
 
+;[DB_local_clone]
+;database=postgres
+;user=postgres
+;password=00000
+;host=127.0.0.1
+;port=5432
+
 [DB_local_clone]
-database=postgres
-user=postgres
-password=00000
-host=127.0.0.1
+database=itcoty_backup
+user=ruslan
+password=12345
+host=localhost
 port=5432
 
 [My_channels]
-no_sorted_channel = -1001175723940
+no_sorted_channel = -1001705718916
 ;no_sorted_channel = -1001519882120
-backend_channel = -1001754004445
-frontend_channel = -1001345406077
-devops_channel = -1001541610415
-pm_channel = -1001775239224
-product_channel = -1001775239224
-designer_channel = -1001551072698
-analyst_channel = -1001217403746
-fullstack_channel = -1001772544178
-mobile_channel = -1001680724691
-qa_channel = -1001443748035
-hr_channel = -1001746783048
-game_channel = -1001502590249
-ba_channel = -1001217403746
-test_channel = -1001175723940
-marketing_channel = -1001733516014
-agregator_channel = -1001709625616
-junior_channel = -1001743099081
-sales_manager = -1001752454812
+backend_channel = -1001705718916
+frontend_channel = -1001705718916
+devops_channel = -1001705718916
+pm_channel = -1001705718916
+product_channel = -1001705718916
+designer_channel = -1001705718916
+analyst_channel = -1001705718916
+fullstack_channel = -1001705718916
+mobile_channel = -1001705718916
+qa_channel = -1001705718916
+hr_channel = -1001705718916
+game_channel = -1001705718916
+ba_channel = -1001705718916
+test_channel = -1001705718916
+marketing_channel = -1001705718916
+agregator_channel = -1001705718916
+junior_channel = -1001705718916
+sales_manager = -1001705718916
 ; sales_manager is pushing to no/sort
-middle_channel = -1001175723940
-senior_channel = -1001175723940
-no_sort_channel = -1001175723940
-sales_manager_channel = -1001752454812
-admin_channel = -1001897438132
+middle_channel = -1001705718916
+senior_channel = -1001705718916
+no_sort_channel = -1001705718916
+sales_manager_channel = -1001705718916
+admin_channel = -1001858129669
 ;admin_channel = https://t.me/+1oHa55LGy7syOTQy
-admin_channel_url = https://t.me/itcotyAdminka
+admin_channel_url = https://t.me/fake_admin_ch
 bot = 5484849364
 bot2 = https://t.me/for_send_messages_bot
 bot_test = 5437545079
 alexandr_channel = https://t.me/+MweenankVOczZTUy
 hub_bot = -1001427569857
 hub_channel = -1001427569857
-agregator_link = https://t.me/it_jobs_agregator
+agregator_link = https://t.me/agrerator_channel_fake
 temporary_channel = -1001671844820
 
 ;;FAKE FOR DEVELOPING -------------------------------
