--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ click==8.1.3
 colorama==0.4.5
 et-xmlfile==1.1.0
 Flask==2.1.3
+Flask-Cors==3.0.10
 frozenlist==1.3.1
 fsspec==2022.8.2
 gunicorn==20.1.0
@@ -46,6 +47,7 @@ sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
 Telethon==1.24.0
+termcolor==2.2.0
 TgCrypto==1.2.3
 tqdm==4.64.1
 trio==0.21.0
