--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ h11==0.13.0
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
+libretranslatepy==2.1.1
 lxml==4.9.1
 MarkupSafe==2.1.1
 multidict==6.0.2
@@ -50,6 +51,7 @@ Telethon==1.24.0
 termcolor==2.2.0
 TgCrypto==1.2.3
 tqdm==4.64.1
+translate==3.6.1
 trio==0.21.0
 trio-websocket==0.9.2
 urllib3==1.26.11
