--- a/settings/config.ini
+++ b/settings/config.ini
@@ -51,10 +51,10 @@ agregator_channel = -1001709625616
 junior_channel = -1001743099081
 sales_manager = -1001752454812
 ; sales_manager is pushing to no/sort
+sales_manager_channel = -1001752454812
 middle_channel = -1001175723940
 senior_channel = -1001175723940
 no_sort_channel = -1001175723940
-sales_manager_channel = -1001752454812
 admin_channel = -1001897438132
 ;admin_channel = https://t.me/+1oHa55LGy7syOTQy
 admin_channel_url = https://t.me/itcotyAdminka
@@ -172,6 +172,7 @@ mobile = https://t.me/+6V0HljFxmfliZWVi
 devops = https://t.me/+lNQppKkVtVgwZTgy
 marketing = https://t.me/+SwMaJxFIa2c3NmJi
 sales_manager = https://t.me/+niATuxkqR6w4OWMy
+sales_manager_channel = https://t.me/+niATuxkqR6w4OWMy
 
 [channel_links]
 1 = https://t.me/it_jobs_middle_and_senior
@@ -197,6 +198,7 @@ marketing_channel = https://t.me/+yEnQOwn5c3gwOWEy
 agregator_channel = https://t.me/it_jobs_agregator
 junior_channel = https://t.me/jobs_for_it_juniors
 sales_manager = https://t.me/+k7DwcBQRY5A3MGNi
+sales_manager_channel = https://t.me/+k7DwcBQRY5A3MGNi
 no_sort_channel = https://t.me/+SU24DJp9J5AwYWEy
 
 ;[DB]
