--- a/_apps/coffee_customer_bot_apps/settings/config.ini
+++ b/_apps/coffee_customer_bot_apps/settings/config.ini
@@ -1,6 +1,10 @@
 [Bot]
 customer_token = 5916100184:AAF2BzzpRPziaUNHQkRw4lfQtcm4bm4l0nU
 horeca_token = 6152380047:AAEeo0eKllE93tLVreoXYqQxa75wHCzh8Lw
+;[Bot]
+;customer_token = 6637806649:AAHZzHJ2qwLHfON4XujYMqGYjIn5Ql17qY0
+;horeca_token = 6784209473:AAESK6fiESV_ijnf22gwFKBGwiNG9-dalkc
+
 
 [Database]
 database = coffee_database
