--- a/settings/config.ini
+++ b/settings/config.ini
@@ -15,9 +15,9 @@
 ;port=5432
 
 [DB_local_clone]
-database=postgres
-user=postgres
-password=00000
+database=fake
+user=ruslan
+password=12345
 host=127.0.0.1
 port=5432
 ;
