--- a/settings/config.ini
+++ b/settings/config.ini
@@ -15,8 +15,8 @@
 ;port=5432
 
 [DB_local_clone]
-database=fake
-user=ruslan
+database=postrges
+user=postrges
 password=12345
 host=127.0.0.1
 port=5432
