--- a/settings/config.ini
+++ b/settings/config.ini
@@ -15,8 +15,8 @@
 ;port=5432
 
 [DB_local_clone]
-database=postrges
-user=postrges
+database=postgres
+user=postgres
 password=00000
 host=127.0.0.1
 port=5432
