--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,75 @@
+aiofiles==23.2.1
 aiogram==2.22.2
 aiohttp==3.8.3
 aiosignal==1.2.0
-anyio==3.6.2
-asgiref==3.5.2
+annotated-types==0.6.0
+anyio==3.7.1
+asgiref==3.7.2
 async-generator==1.10
+async-property==0.2.2
 async-timeout==4.0.2
+asyncstdlib==3.10.9
 attrs==22.1.0
 Babel==2.9.1
 beautifulsoup4==4.11.1
+Brotli==1.1.0
+browser-cookie3==0.19.1
 certifi==2022.6.15
 cffi==1.15.1
 chardet==3.0.4
 charset-normalizer==2.1.0
-click==8.1.3
+click==8.1.7
 colorama==0.4.5
+curl-cffi==0.5.10b4
+Django==5.0.1
+djangorestframework==3.14.0
+duckduckgo-search==3.9.6
 et-xmlfile==1.1.0
+exceptiongroup==1.2.0
+fastapi==0.104.1
 Flask==2.1.3
 Flask-Cors==3.0.10
 frozenlist==1.3.1
 fsspec==2022.8.2
-googletrans-py==4.0.0
+g4f==0.1.8.8
+googletrans==3.0.0
 gunicorn==20.1.0
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
 hstspreload==2023.1.1
-httpcore==0.17.0
-httpx==0.24.0
-hyperframe==6.0.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
 idna==2.10
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Js2Py==0.74
 libretranslatepy==2.1.1
-lxml==4.9.1
+loguru==0.7.2
+lxml==4.9.3
+lz4==4.3.2
 MarkupSafe==2.1.1
+mmh3==4.0.1
 multidict==6.0.2
+nest-asyncio==1.5.8
 numpy==1.23.1
 openpyxl==3.0.10
 outcome==1.2.0
 pandas==1.4.3
+Pillow==10.1.0
+platformdirs==4.0.0
 psycopg2==2.9.3
+py-arkose-generator==0.0.0.2
 pyaes==1.6.1
 pyasn1==0.4.8
 pycparser==2.21
+pycryptodome==3.19.0
+pycryptodomex==3.19.0
+pydantic==2.5.1
+pydantic_core==2.14.3
+PyExecJS==1.5.1
+pyjsparser==2.7.1
 Pyrogram==2.0.35
 PySocks==1.7.1
 pyTelegramBotAPI==4.6.1
@@ -52,22 +79,33 @@ pytz==2022.1
 requests==2.28.1
 rfc3986==1.5.0
 rsa==4.9
-selenium==4.4.3
+selenium==4.15.2
 six==1.16.0
 sniffio==1.3.0
+socksio==1.0.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
+sqlparse==0.4.4
+starlette==0.27.0
 telegraph==2.2.0
-Telethon==1.28.5
+Telethon==1.24.0
 termcolor==2.2.0
 TgCrypto==1.2.3
 tqdm==4.64.1
 translate==3.6.1
 trio==0.21.0
 trio-websocket==0.9.2
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
+undetected-chromedriver==3.5.4
 urllib3==1.26.11
+uvicorn==0.24.0.post1
+waitress==2.1.2
 webdriver-manager==3.8.3
+websockets==12.0
 Werkzeug==2.2.0
+win32-setctime==1.1.0
 wsproto==1.2.0
 xlrd==2.0.1
 XlsxWriter==3.0.3
