--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,8 @@ charset-normalizer==2.1.0
 click==8.1.7
 colorama==0.4.5
 curl-cffi==0.5.10b4
-Django==5.0.1
-djangorestframework==3.14.0
+Django
+djangorestframework
 duckduckgo-search==3.9.6
 et-xmlfile==1.1.0
 exceptiongroup==1.2.0
