--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ click==8.1.7
 colorama==0.4.5
 curl-cffi==0.5.10b4
 Django
-djangorestframework
+djangorestframeworkgit
 duckduckgo-search==3.9.6
 et-xmlfile==1.1.0
 exceptiongroup==1.2.0
