--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ __pycache__/
 ./logs/
 ./participants/
 delete*.py
-
 *.session-journal
 *.xlsx
 main_start.py
+/settings/server/
+/settings/config.ini
+/settings/config_keys.ini
+./main_start.py
