--- a/settings/config_keys.ini
+++ b/settings/config_keys.ini
@@ -3,7 +3,7 @@
 ;api_hash = 7f98880741868033195cefeb436c2407
 ;username = ruslan
 ;
-;;fake account
+;fake account
 ;[Token]
 ;token = 5730794427:AAH_XjUoNFS5RB2Wzav61brF2u4BHtNFURM
 
