--- a/_apps/amin_panel_tg_view/settings/config.ini
+++ b/_apps/amin_panel_tg_view/settings/config.ini
@@ -1,3 +1,8 @@
 [Bot]
 ;token = 6152380047:AAEeo0eKllE93tLVreoXYqQxa75wHCzh8Lw
 token = 5961856240:AAFXKSgMJ2FF53Ec5G8AgiscYubokw0XotE
+
+[Telegram_api]
+api_id = 11944864
+api_hash = '7f98880741868033195cefeb436c2407'
+username = 'shorts_pusher'
