--- a/settings/config_keys.ini
+++ b/settings/config_keys.ini
@@ -11,7 +11,7 @@
 ;Alexandr telegram app
 api_id = 13105861
 api_hash = 6b31f72207b8e47b588701a9761da84b
-username = 1763672666
+username = green
 ;username = new_username
 
 [Token_talking_bot]
@@ -24,7 +24,7 @@ token_red =5568457013:AAFDrQUpSU4vxSy0mC-jAEuf_orwL-yFiAA
 [Telegram_double]
 api_id = 11944864
 api_hash = 7f98880741868033195cefeb436c2407
-username = ruslan
+username = red
 
 ;;Fake accounts
 ;[Telegram]
