--- a/_apps/amin_panel_tg_view/settings/config.ini
+++ b/_apps/amin_panel_tg_view/settings/config.ini
@@ -5,4 +5,4 @@ token = 5961856240:AAFXKSgMJ2FF53Ec5G8AgiscYubokw0XotE
 [Telegram_api]
 api_id = 11944864
 api_hash = 7f98880741868033195cefeb436c2407
-username = shorts_pusher
+username = admin
