--- a/settings/config_keys.ini
+++ b/settings/config_keys.ini
@@ -1,30 +1,37 @@
 ;[Telegram]
-;;Alexandr web_form_bot app
-;api_id = 13105861
-;api_hash = 6b31f72207b8e47b588701a9761da84b
-;username = 1763672666
+;api_id = 11944864
+;api_hash = 7f98880741868033195cefeb436c2407
+;username = ruslan
+;
+;;fake account
+;[Token]
+;token = 5730794427:AAH_XjUoNFS5RB2Wzav61brF2u4BHtNFURM
+
+[Telegram]
+;Alexandr telegram app
+api_id = 13105861
+api_hash = 6b31f72207b8e47b588701a9761da84b
+username = green
+;username = new_username
 
 [Token_talking_bot]
 token = 5629484335:AAG2o2UXwHT1QbRd54dW6Fxjy0R4B3mdnKk
 
-
 [Token]
-token_main = 5730794427:AAH_XjUoNFS5RB2Wzav61brF2u4BHtNFURM
-token = 5730794427:AAH_XjUoNFS5RB2Wzav61brF2u4BHtNFURM
-token_red = 5568457013:AAFDrQUpSU4vxSy0mC-jAEuf_orwL-yFiAA
-;token = 5587593882:AAHFV01H5wG081EAW1ydjSx1br6KrN400Ms
-
-
-[Telegram]
-;Ruslan Telegram
-api_id = 11944864
-api_hash = 7f98880741868033195cefeb436c2407
-username = green_local
+token = 5587593882:AAHFV01H5wG081EAW1ydjSx1br6KrN400Ms
+token_red =5568457013:AAFDrQUpSU4vxSy0mC-jAEuf_orwL-yFiAA
 
 [Telegram_double]
-api_id = 13105861
-api_hash = 6b31f72207b8e47b588701a9761da84b
-username = red_local
+api_id = 11944864
+api_hash = 7f98880741868033195cefeb436c2407
+username = red
+
+;;Fake accounts
+;[Telegram]
+;;Ruslan Telegram
+;api_id = 11944864
+;api_hash = 7f98880741868033195cefeb436c2407
+;username = ruslan
 ;
 ;[Token]
 ;token = 5568457013:AAFDrQUpSU4vxSy0mC-jAEuf_orwL-yFiAA
