add smtp config

--- a/settings/config.ini
+++ b/settings/config.ini
@@ -28,6 +28,14 @@ port=5432
 ;host=localhost
 ;port=5432
 
+[SMTP_server]
+EMAIL_HOST = smtp.mail.ru
+EMAIL_HOST_USER = notification@itcoty.ru
+EMAIL_HOST_PASSWORD = idArUK&emP12
+EMAIL_PORT = 465
+
+[DRF_app]
+SECRET_KEY = "django-insecure-2v1)sou*)kh^5r7_k@pi%26v(=v=owgjc@z0fy%rb$l*w=2d=y"
 
 [My_channels]
 no_sorted_channel = -1001175723940
