git ignore update

--- a/_apps/individual_tg_bot/.env_sample
+++ b/_apps/individual_tg_bot/.env_sample
@@ -1,12 +1,12 @@
-TOKEN=
+TOKEN=7157423038:AAH0eoPy8qfxttMazJk8_5qpiq-DyLdPL7E
 ADMIN_ID=
 
 #
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
+DB_NAME=postrges
+DB_USER=postrges
+DB_PASSWORD=00000
+DB_HOST=localhost
+DB_PORT=5432
 DB_URL=
 
 
