--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ aiohttp==3.8.3
 aiosignal==1.2.0
 annotated-types==0.6.0
 anyio==3.7.1
+APScheduler==3.10.4
 asgiref==3.7.2
 async-generator==1.10
 async-property==0.2.2
-async-timeout==4.0.2
+async-timeout==4.0.3
+asyncpg==0.29.0
 asyncstdlib==3.10.9
 attrs==22.1.0
 Babel==2.9.1
@@ -20,8 +22,16 @@ chardet==3.0.4
 charset-normalizer==2.1.0
 click==8.1.7
 colorama==0.4.5
+cryptography==42.0.5
 curl-cffi==0.5.10b4
-Django
+defusedxml==0.7.1
+dj-rest-auth==5.1.0
+Django==4.2.11
+django-allauth==0.61.1
+django-cors-headers==4.3.1
+django-filter==24.2
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
 duckduckgo-search==3.9.6
 et-xmlfile==1.1.0
 exceptiongroup==1.2.0
@@ -53,8 +63,10 @@ mmh3==4.0.1
 multidict==6.0.2
 nest-asyncio==1.5.8
 numpy==1.23.1
+oauthlib==3.2.2
 openpyxl==3.0.10
 outcome==1.2.0
+packaging==24.0
 pandas==1.4.3
 Pillow==10.1.0
 platformdirs==4.0.0
@@ -69,16 +81,19 @@ pydantic==2.5.1
 pydantic_core==2.14.3
 PyExecJS==1.5.1
 pyjsparser==2.7.1
+PyJWT==2.8.0
 Pyrogram==2.0.35
 PySocks==1.7.1
 pyTelegramBotAPI==4.6.1
 python-dateutil==2.8.2
 python-dotenv==0.21.0
+python3-openid==3.2.0
 pytz==2022.1
 requests==2.28.1
+requests-oauthlib==2.0.0
 rfc3986==1.5.0
 rsa==4.9
-selenium==4.15.2
+selenium==4.19.0
 six==1.16.0
 sniffio==1.3.0
 socksio==1.0.0
@@ -94,14 +109,14 @@ tqdm==4.64.1
 translate==3.6.1
 trio==0.21.0
 trio-websocket==0.9.2
-typing_extensions==4.8.0
+typing_extensions==4.10.0
 tzdata==2023.3
 tzlocal==5.2
 undetected-chromedriver==3.5.4
 urllib3==1.26.11
 uvicorn==0.24.0.post1
 waitress==2.1.2
-webdriver-manager==3.8.3
+webdriver-manager==4.0.1
 websockets==12.0
 Werkzeug==2.2.0
 win32-setctime==1.1.0
