--- a/settings/config.ini
+++ b/settings/config.ini
@@ -4,6 +4,7 @@ user=postgres
 password=00000
 host=127.0.0.1
 port=5432
+DB_URL=postgresql://postgres:00000@127.0.0.1:5432/postgres
 
 [My_channels]
 no_sorted_channel = -1001175723940
