--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ dj-rest-auth==5.1.0
 Django==4.2.11
 django-allauth==0.61.1
 django-cors-headers==4.3.1
+django-countries==7.6.1
 django-filter==24.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
