--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ delete*.py
 /_apps/itcoty_web/api/migrations/
 /*.log
 /_apps/coffee_customer_bot_apps/settings/config.ini
+/_apps/coffee_customer_bot_apps/database/coffee_db.sqlite3
