--- a/settings/config.ini
+++ b/settings/config.ini
@@ -13,6 +13,7 @@ backend_channel = -1001754004445
 frontend_channel = -1001345406077
 devops_channel = -1001541610415
 pm_channel = -1001775239224
+;product_channel = -1001775239224
 product_channel = -1001775239224
 designer_channel = -1001551072698
 analyst_channel = -1001217403746
