--- a/settings/config.ini
+++ b/settings/config.ini
@@ -142,6 +142,7 @@ backend_channel = https://t.me/backend_dev_jobs_agregator
 frontend_channel = https://t.me/jobs_for_frontend
 devops_channel = https://t.me/+q8nmauo-z7M1YTIy
 pm_channel = https://t.me/Jobs_aggregator_PM
+product_channel = https://t.me/Jobs_aggregator_PM
 designer_channel = https://t.me/Jobs_for_designers
 analyst_channel = https://t.me/BA_jobs_agregator
 mobile_channel = https://t.me/Jobs_for_Mobile_dev
