--- a/_apps/itcoty_web/docker-compose.yml
+++ b/_apps/itcoty_web/docker-compose.yml
@@ -30,8 +30,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        - NO_CACHE=true
+#      args:
+#        - NO_CACHE=true
     volumes:
       - .:/app
     init: true
