--- a/_apps/itcoty_web/example.env
+++ b/_apps/itcoty_web/example.env
@@ -14,3 +14,10 @@ LOCALHOST=http://127.0.0.1
 DEV_4SERVER=the_project_dev_server
 PROD_SERVER=the_project_prod_server
 NOTIFICATION_EMAIL=the_project_notification_email
+
+EMAIL_SMTP_HOST=your.smtp.server
+EMAIL_SMTP_PORT=587
+EMAIL_SMTP_USER=your@email.com
+EMAIL_SMTP_PASSWORD=your apps pasw here
+EMAIL_DEFAULT_SENDER=supercot@itcoty.ru
+EMAIL_DEFAULT_THEME=Django_auth>>
