Refresh example credentials.

--- a/_apps/itcoty_web/example.env
+++ b/_apps/itcoty_web/example.env
@@ -19,5 +19,5 @@ EMAIL_SMTP_HOST=your.smtp.server
 EMAIL_SMTP_PORT=587
 EMAIL_SMTP_USER=your@email.com
 EMAIL_SMTP_PASSWORD=your apps pasw here
-EMAIL_DEFAULT_SENDER=supercot@itcoty.ru
+EMAIL_DEFAULT_SENDER=defaultsender@email.ru
 EMAIL_DEFAULT_THEME=Django_auth>>
