--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ delete*.py
 /_apps/coffee_customer_bot_apps/settings/config.ini
 /_apps/ask_gpt/gpt_connect/.env
 /_apps/ask_gpt/settings/_debug.py
+frontend
