--- a/_apps/itcoty_web/nginx.conf
+++ b/_apps/itcoty_web/nginx.conf
@@ -28,20 +28,35 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-        }
+            }
+
     }
 
     server {
         listen 443 ssl;
         server_name 4dev.itcoty.ru;
+
         ssl_certificate_key /etc/ssl/private/nginx.key;
         ssl_certificate /etc/ssl/certs/nginx.crt;
+
         location / {
-            proxy_pass http://itcoty_web.api:8000;
+            proxy_pass http://google.com;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
                     }
             }
+
+    server {
+        listen 80;
+        server_name github.com;
+        location / {
+            proxy_pass http://google.com;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            }
+        }
 }
