Add github token variable example.

--- a/_apps/itcoty_web/example.env
+++ b/_apps/itcoty_web/example.env
@@ -21,3 +21,6 @@ EMAIL_SMTP_USER=your@email.com
 EMAIL_SMTP_PASSWORD=your apps pasw here
 EMAIL_DEFAULT_SENDER=defaultsender@email.ru
 EMAIL_DEFAULT_THEME=Django_auth>>
+
+GITHUB_USERNAME=your_github_username
+GITHUB_TOKEN=ghp_PLdbtmFZBlvadgqetETABGsbG4iFGDBHGz
