Exclude ignoring logs.py.

--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,8 @@ main_start.py
 *.txt
 *.xlsx
 
-!/logs/logs.py
-!/other_operations/other_operations.py
+!logs/logs.py
+!other_operations/other_operations.py
 
 settings/server/
 settings/local/
