Ignore 'envs' directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,50 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-
-.local
 .env
-./venv/
-.git/
-.idea/
-./other_operations/
-./messages/
-./excel/
-./__backup__/
-./logs/
-./participants/
+.local
+.venv
+.git
+.idea
+
+__backup__
+__pycache__
+
+venv
+envs
+excel
+logs
+messages
+participants
+db_backup
+other_operations
+
 delete*.py
+main_start.py
+
+*.backup
+*.log
+*.save
 *.session-journal
 *.session
+*.se2
+*.sqlite3
+*.tmp
+*.txt
 *.xlsx
-./main_start.py
-/settings/server/
-/settings/local/
-#/settings/config*.ini
-/_apps/simpleatom/form.sqlite3
-/db_backup/
-#/_apps/amin_panel_tg_view/settings/
-./_apps/individual_tg_bot/config.ini
-./_apps/web_form_bot/settings/config.ini
-/_apps/web_form_bot/settings/config.ini
-/settings/config_keys.ini
-/settings/database_settings.py
-/_apps/individual_tg_bot/config.ini
-/settings/firefox_driver/
-/_apps/itcoty_web/config.ini
-/Try.py
-/_debug.py
-/test*.py
-/*.log
-/__backup__/
-/_apps/coffee_customer_bot_apps/settings/config.ini
-/_apps/ask_gpt/gpt_connect/.env
-/_apps/ask_gpt/settings/_debug.py
-frontend
+
+!logs/logs.py
+!other_operations/other_operations.py
+
+settings/server/
+settings/local/
+settings/database_settings.py
+settings/config_keys.ini
+settings/firefox_driver/
+
+_apps/coffee_customer_bot_apps/settings/config.ini
+_apps/simpleatom/form.sqlite3
+_apps/individual_tg_bot/config.ini
+_apps/itcoty_web/config.ini
+_apps/web_form_bot/settings/config.ini
+
+_debug.py
+Try.py
+test*.py
