--- a/_apps/itcoty_web/Taskfile.yml
+++ b/_apps/itcoty_web/Taskfile.yml
@@ -5,7 +5,7 @@ tasks:
   docker-up:
     cmds:
       - echo $GITHUB_TOKEN | docker login ghcr.io -u $GITHUB_USERNAME --password-stdin
-      - docker compose up -d --build
+      - docker compose up --build
 
   docker-down:
     cmds:
