--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,16 @@
 .git
 .idea
 
+_apps/itcoty_web/.env
+devserver.env
+prodserver.env
+
 __backup__
 __pycache__
 
-venv
 envs
 excel
+venv
 logs
 messages
 participants
