Add the database example environment variables.

--- a/_apps/itcoty_web/example.env
+++ b/_apps/itcoty_web/example.env
@@ -9,6 +9,10 @@ DEV_DB_HOST=localhost
 DEV_DB_PORT=5432
 DEV_DB_USER=my_database_user
 DEV_DB_PASSWORD=my_database_password
+DEFAULT_DB_NAME=postgres
+LOCAL_DB_VERSION=16
+WINDOWS_DB_PATH=C:\Program Files\Postgresql\
+
 
 LOCALHOST=http://127.0.0.1
 DEV_4SERVER=the_project_dev_server
