--- a/_apps/itcoty_web/nginx.conf
+++ b/_apps/itcoty_web/nginx.conf
@@ -4,7 +4,7 @@ http {
     server {
         listen 80;
 
-        location /d/ {
+        location / {
             proxy_pass http://itcoty_web.node:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -12,7 +12,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /d/static/admin/ {
+        location /static/admin/ {
             alias /static/admin/;
             autoindex on;
             types {
@@ -21,7 +21,7 @@ http {
                 }
             }
 
-        location /d/api/ {
+        location /api/ {
             proxy_pass http://itcoty_web.api:8000/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -29,7 +29,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             }
 
-        location /d/api/v1/ {
+        location /api/v1/ {
             proxy_pass http://itcoty_web.api:8000/api/v1/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
