Remove server urls from nginx configuration.

--- a/_apps/itcoty_web/nginx.conf
+++ b/_apps/itcoty_web/nginx.conf
@@ -3,7 +3,7 @@ events {}
 http {
     server {
         listen 80;
-        server_name localhost 4dev.itcoty.ru www.4dev.itcoty.ru;
+        server_name localhost;
 
         location / {
             proxy_pass http://itcoty_web.node:3000;
