Add a variable to detect placement when pulling docker image.

--- a/_apps/itcoty_web/Taskfile.yml
+++ b/_apps/itcoty_web/Taskfile.yml
@@ -21,7 +21,7 @@ tasks:
       - docker compose down
       - |
         if docker images ghcr.io/zheniagnedchik/itcoty; then
-        docker rmi ghcr.io/zheniagnedchik/itcoty:latest
+        docker rmi ghcr.io/zheniagnedchik/itcoty:${PLACEMENT}
         else
         echo "Image ghcr.io/zheniagnedchik/itcoty does not exist."
         fi
