--- a/_apps/itcoty_web/Taskfile.yml
+++ b/_apps/itcoty_web/Taskfile.yml
@@ -72,4 +72,5 @@ tasks:
       - python manage.py run-database
       - python manage.py makemigrations
       - python manage.py migrate
+      - python manage.py set-devsettings
       - python manage.py runserver --settings=itcoty_web.drfout
