--- a/_apps/itcoty_web/docker-compose.yml
+++ b/_apps/itcoty_web/docker-compose.yml
@@ -56,9 +56,11 @@ services:
     depends_on:
       api:
         condition: service_started
-      base:
-        condition: service_healthy
-    command: [ python, manage.py, runserver, 0.0.0.0:8000, --settings=itcoty_web.drfout ]
+    command: >
+      sh -c "
+      python manage.py set-devsettings &&
+      python manage.py runserver 0.0.0.0:8000 --settings=itcoty_web.drfout
+      "
 
   node:
     image: ghcr.io/zheniagnedchik/itcoty:${PLACEMENT}
